<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/display_new_cat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mdevs.idle.cat.DisplayCatActivity">


    <!-- Global guidelines. -->
    <android.support.constraint.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="7dp" />

    <android.support.constraint.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="216dp" />

    <android.support.constraint.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/ads_bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="240dp" />

    <android.support.constraint.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_center_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/one_third_center_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/two_third_center_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6666"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_center_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="120dp" />
    <!-- Cat status section guidelines. -->
    <android.support.constraint.Guideline
        android:id="@+id/cat_status_top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="22dp" />

    <android.support.constraint.Guideline
        android:id="@+id/cat_status_bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="43dp" />
    <!-- Cat section guidelines. -->
    <android.support.constraint.Guideline
        android:id="@+id/cat_top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/cat_bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />
    <!-- Operator section guidelines. -->
    <android.support.constraint.Guideline
        android:id="@+id/operator_section_top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="192dp" />
    <!-- Cat Status -->


    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_state"
        android:text="TextView"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/cat_status_top_guideline"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/age_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Date: 1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/cat_status_top_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_center_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cat_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_name_button"
        android:textColor="#FDFBFB"
        app:layout_constraintBottom_toTopOf="@+id/cat_status_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/cat_status_top_guideline" />

    <Button
        android:id="@+id/chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="344dp"
        android:background="@drawable/button_state"
        android:onClick="chatnow"
        android:text="Chat"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/cat_status_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/cat_status_top_guideline"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/cat_static_food_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/cat_status_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/cat_status_top_guideline" />

    <TextView
        android:id="@+id/cat_food_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\???"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/cat_status_bottom_guideline"
        app:layout_constraintLeft_toRightOf="@+id/cat_static_food_text_view"
        app:layout_constraintTop_toTopOf="@+id/cat_status_top_guideline" />

    <TextView
        android:id="@+id/cat_static_hungry_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hungry_button"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/cat_name_text_view" />

    <TextView
        android:id="@+id/cat_hungry_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\???"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toRightOf="@+id/cat_static_hungry_text_view"
        app:layout_constraintTop_toBottomOf="@+id/cat_name_text_view" />

    <TextView
        android:id="@+id/cat_static_intimacy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intimacy_button"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/cat_name_text_view" />

    <TextView
        android:id="@+id/cat_intimacy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\???"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toRightOf="@+id/cat_static_intimacy_text_view"
        app:layout_constraintTop_toBottomOf="@+id/cat_name_text_view" />
    <!-- Cat -->

    <!-- Operator section items. -->

    <ImageView
        android:id="@+id/cat_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/pusheen_normal_1"
        app:layout_constraintBottom_toTopOf="@+id/cat_bottom_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/cat_top_guideline"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cat_chat_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="..."
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cat_bottom_guideline" />


    <Button
        android:id="@+id/feed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="feedMyCat"
        android:text="@string/feed_button"
        android:background="@drawable/button_state"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toLeftOf="@+id/one_third_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/operator_section_top_guideline" />

    <Button
        android:id="@+id/chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="chatWithCat"
        android:text="TALK"
        android:background="@drawable/button_state"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/one_third_center_guideline"
        app:layout_constraintRight_toLeftOf="@+id/two_third_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/operator_section_top_guideline" />

    <Button
        android:id="@+id/ads_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="watchAds"
        android:text="Get Food"
        android:background="@drawable/button_state"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/two_third_center_guideline"
        app:layout_constraintRight_toLeftOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/operator_section_top_guideline" />

    <!-- Ads -->




    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="432dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-9969027511473485/1441853494"
        app:layout_constraintBottom_toBottomOf="@+id/ads_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/bottom_guideline"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"></com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
